# controllers/api/test-api-controller.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
 const authenticator = require('../../modules/oauth/middleware/authenticator');
+const ApiResponse = require('../../components').viewModels.ApiResponse;
 
 router.get('/',authenticator,(req,res)=>{
     let data = {
@@ -8,12 +9,24 @@ router.get('/',authenticator,(req,res)=>{
     res.json(data);
 });
 
-router.get('/all_tokens',authenticator,(req,res)=>{
-    let oAuthDao = require('../../db/dao/oauth-dao');
-    oAuthDao.findAllAccessTokens((err,oAuthAccessTokens) => {
-        if(err) res.send(err);
-        res.json(oAuthAccessTokens);
-    });
+router.get('/allUsers',authenticator,(req,res)=>{
+    // let oAuthDao = require('../../db/dao/oauth-dao');
+    let UserDao = require('../../db/dao/user-dao');
+    // UserDao.findAllUsers((err,Users) => {
+    //     if(err) res.send(err);
+    //     else res.json(Users);
+    // });
+
+    UserDao.findAllUsers()
+        .then(users => {
+            if(users) {
+                res.json(new ApiResponse(200,'ok',users));
+            }else{
+                res.json(new ApiResponse(400,'no user found'));
+            }
+        }).catch(err => {
+            res.send(err);
+        });
 });
 
 
